--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,70 @@
 [versions]
+kotlin = "2.0.20"
 agp = "8.13.0"
-kotlin = "2.0.21"
-coreKtx = "1.10.1"
-junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-appcompat = "1.6.1"
-material = "1.10.0"
+compose-bom = "2024.09.02"
+activity-compose = "1.9.2"
+compose-compiler-plugin = "2.0.20"
 
-[libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+lifecycle = "2.8.4"
+core-ktx = "1.13.1"
+camera = "1.3.4"
+camera-view = "1.3.0"
+coil = "2.6.0"
+coroutines = "1.10.2"
+okhttp = "4.12.0"
+koin = "3.5.6"
+serialization = "1.6.3"
+material = "1.12.0"
+tensorflow = "16.4.0"
+ui-graphics = "1.9.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-library      = { id = "com.android.library",     version.ref = "agp" }
+kotlin-android       = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose       = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "compose-compiler-plugin" }
 
+[libraries]
+androidx-compose-bom      = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
+compose-ui            = { module = "androidx.compose.ui:ui" }
+compose-material3     = { module = "androidx.compose.material3:material3" }
+compose-tooling       = { module = "androidx.compose.ui:ui-tooling" }
+compose-tooling-prev  = { module = "androidx.compose.ui:ui-tooling-preview" }
+activity-compose      = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
+
+core-ktx              = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
+lifecycle-runtime     = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-vm-compose  = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+
+camera-core           = { module = "androidx.camera:camera-core", version.ref = "camera" }
+camera-camera2        = { module = "androidx.camera:camera-camera2", version.ref = "camera" }
+camera-lifecycle      = { module = "androidx.camera:camera-lifecycle", version.ref = "camera" }
+camera-view           = { module = "androidx.camera:camera-view", version.ref = "camera-view" }
+
+coroutines            = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "coroutines" }
+
+koin-android          = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-compose          = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+okhttp                = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+coil-compose          = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+serialization-json    = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
+
+material              = { module = "com.google.android.material:material", version.ref = "material" }
+
+tensorflow-gpu = { module = "com.google.android.gms:play-services-tflite-gpu", version.ref = "tensorflow" }
+tensorflow-java = { module = "com.google.android.gms:play-services-tflite-java", version.ref = "tensorflow" }
+tensorflow-support = { module = "com.google.android.gms:play-services-tflite-support", version.ref = "tensorflow" }
+androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "ui-graphics" }
+
+[bundles]
+ui-compose  = [ "compose-ui", "compose-material3", "compose-tooling-prev", "activity-compose" ]
+androidx-core = [ "core-ktx", "lifecycle-runtime", "lifecycle-vm-compose" ]
+camerax     = [ "camera-core", "camera-camera2", "camera-lifecycle", "camera-view" ]
+di          = [ "koin-android", "koin-compose" ]
+network     = [ "coroutines", "okhttp"]
+images      = [ "coil-compose" ]
+tensorflow = [ "tensorflow-gpu", "tensorflow-java", "tensorflow-support" ]
+debug-compose = [ "compose-tooling" ]
+
+# NEW: XML theme deps for app (Material3 theme family)
+xml-theme = [ "material" ]
